tests/res/assignment/reassign_immutable.say
// An immutable binding cannot be reassigned.
say x = 1;
x = 2; // error: Cannot reassign immutable binding 'x'; declare it 'mut'
